<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <TextView
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:text="@string/auau_um"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="192dp" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:text="@string/auau_dois"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="315dp" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="100dp"
        android:text="@string/total_compra"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="438dp" />

</androidx.constraintlayout.widget.ConstraintLayout>